# fashion

./: .gitignore  Cargo.toml  README.md  drop.sql  fashion-physic.ndm2  run.sh  schema.sql
backend/: Cargo.toml  README.md
backend/sql/: product_category.sql  schema.sql
backend/src/: main.rs
backend/src/api/: home.rs  mod.rs  order.rs  product.rs
frontend/: package-lock.json
sql/: schema.sql
src/: auth.rs  main.rs
src/api/: content.rs  home.rs  mod.rs  order.rs  product.rs  user.rs
src/auth/: claims.rs  jwt_middleware.rs  mod.rs
