[package]
name = "fashion"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "1.3.55"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
shuttle-poem = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
