[package]
name = "fashion"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "2.0.0"
shuttle-poem = "0.41.0"
shuttle-runtime = "0.41.0"
shuttle-shared-db = {version = "0.41.0",features = ["postgres","sqlx"]}
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
sqlx = "0.7.4"

