[package]
name = "fashion"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.0.0"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
shuttle-poem = "0.46.0"
shuttle-runtime = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
sqlx = "0.7.4"
chrono = "0.4.35"
jsonwebtoken = "9.3.0"
